stretch fixed in flexbox

--- a/src/components/Flex/Flex.css
+++ b/src/components/Flex/Flex.css
@@ -16,8 +16,6 @@
   color: black;
   margin: 15px;
   padding: 20px 15px;
-  font-size: 20px;
-  font-weight: bold;
   display: flex;
   flex-direction: row;
   gap: 15px;
@@ -44,6 +42,9 @@
 
 .column-flex {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .Flex-footer {
